# HiGHS

./: .gitignore  BUILD.bazel  CITATION.cff  CMakeLists.txt  CNAME  FEATURES.md  HiGHS.sln  LicenseNote.txt  MODULE.bazel  README.md  THIRD_PARTY_NOTICES.md  Version.txt  _config.yml  make.jl  meson.build  meson_options.txt  parallel.md  pyproject.toml  setup.py  test_thread.cpp
.github/julia/: build_tarballs.jl  build_tarballs_release.jl  generate_binaries.jl
.github/workflows/: build-bazel.yml  build-fast.yml  build-intel.yml  build-nuget-package.yml  build-python-package-hipo.yml  build-python-package.yml  build-python-sdist-hipo.yml  build-python-sdist.yml  build-unix.yml  build-wheels-hipo.yml  build-wheels-push.yml  build-wheels.yml  build-windows.yml  clang-format.yml  cmake-windows-cpp.yml  code-coverage.yml  documentation.yml  hipo-fetch.yml  hipo-linear-solver.yml  hipo-macos.yml  hipo-mangle.yml  hipo-ubuntu-cblas.yml  hipo-ubuntu.yml  hipo-vcpkg.yml  hipo-win copy.yml  hipo-win-conda-forge.yml  hipo-win-test-segfault.yml  hipo-win-vcpkg-copy.yml  hipo-win-vcpkg.yml  hipo-win.yml  hipo.yml  lint.yml  meson.yml  release-cpack.yml  release.yml  sanitizers-bazel.yml  test-exe.yml  test-fortran-macos.yml  test-nuget-macos.yml  test-nuget-package.yml  (+9 more)
_site/: Gemfile  feed.xml  index.html  sitemap.xml
_site/about/: index.html
_site/archive/: index.html
_site/docs/: example-page.html  getting-started.html  index.html
_site/news/: index.html
_site/search/: index.html
_site/tags/: index.html
app/: CMakeLists.txt  HighsRuntimeOptions.h  RunHighs.cpp
build-32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  HConfig.h  HIGHS.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  highs-config-version.cmake  highs-config.cmake  highs-targets.cmake  openblas_config.h
build-32/app/: INSTALL.vcxproj  INSTALL.vcxproj.filters  (+5 more)
build-static-nohipo/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  HConfig.h  HIGHS.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  highs-targets.cmake  highs_export.h  install_manifest.txt  version.rc
check/: CMakeLists.txt  HCheckConfig.h.bazel.in  TestBasis.cpp  TestBasisSolves.cpp  TestCAPI.c  TestCallbacks.cpp  TestFilereader.cpp  TestHighsHessian.cpp  TestHighsParallel.cpp  TestHipo.cpp  TestICrash.cpp  TestIO.cpp  TestIis.cpp  TestIndicatorConstraints.cpp  TestInfo.cpp  TestIpm.cpp  TestLpSolvers.cpp  TestMipSolver.cpp  TestOptions.cpp  TestOsi.cpp  TestPdlp.cpp  TestPresolve.cpp  TestQpSolver.cpp  TestUserScale.cpp
cmake/: FindHipoDeps.cmake  cpp-highs.cmake  cpp.cmake  dotnet.cmake  hipo-python.cmake  python-highs.cmake  python.cmake  source.cmake  sourcepython.cmake  sources-python.cmake  sources.cmake
dev/: index.html  search_index.js
docs/: make.jl
examples/: CMakeLists.txt  call_highs_from_csharp.cs  call_highs_from_python.py
highs/: CMakeLists.txt  HConfig.h.bazel.in  HConfig.h.in  Highs.h  HighsExternalApi.h  HighsExternalDeps.h  HighsRun.md  highs_bindings.cpp  meson.build
highs/pdlp/cupdlp/cuda/: CMakeLists.txt
highspy/: __init__.py  highs_bindings.cpp  highs_modelling.py  meson.build
highspy-extras/: pyproject.toml
highspy-hipo/: CMakeLists.txt  pyproject.toml
nuget/: README.md  x64-toolchain.cmake
src/: CMakeLists.txt  HConfig.h.bazel.in  HConfig.h.in  Highs.h  highs_bindings.cpp  meson.build  mini_example.html
src/highspy/: highs.py
src/interfaces/: OsiHiGHSSolverInterface.cpp  OsiHiGHSSolverInterface.hpp  highs_c_api.cpp  highs_c_api.h  highs_csharp_api.cs
src/interfaces/highspy/: pyproject.toml
src/io/: Filereader.cpp  FilereaderEms.cpp  FilereaderLp.cpp  FilereaderLp.h  FilereaderMps.cpp  FilereaderNag.cpp  FilereaderNag.h  HMPSIO.cpp  HMPSIO.h  HighsIO.cpp  LoadProblem.h
src/ipm/: IpxWrapper.cpp
src/ipm/ipx/: control.cc  control.h  lp_solver.cc
src/ipm/ipx/src/: basis.cc
src/lp_data/: HConst.h  Highs.cpp  HighsDebug.cpp  HighsLpUtils.cpp  HighsLpUtils.h  HighsModelUtils.cpp  HighsModelUtils.h  HighsOptions.cpp  HighsOptions.h  HighsSolution.cpp  HighsSolution.h  HighsSolutionDebug.cpp  HighsSolutionDebug.h  HighsSolve.cpp
src/mip/: HighsCliqueTable.cpp  HighsCliqueTable.h  HighsCutPool.cpp  HighsImplications.cpp  HighsMipAnalysis.cpp  HighsMipSolver.cpp  HighsMipSolverData.cpp  HighsMipSolverData.h  HighsModkSeparator.cpp  HighsPrimalHeuristics.cpp  HighsSearch.h  HighsTransformedLp.cpp  MipTimer.h  SolveMip.cpp
src/model/: HighsHessianUtils.cpp
src/parallel/: HighsCacheAlign.h  HighsSplitDeque.h  HighsTaskExecutor.cpp  HighsTaskExecutor.h
src/pdlp/cupdlp/: glbopts.h
src/presolve/: ExactSubproblem.h  FindFeasibility.cpp  HPresolve.cpp  HighsPostsolveStack.cpp  HighsPostsolveStack.h  ICrash.cpp  ICrash.h  ICrashUtil.cpp  ICrashUtil.h  Presolve.cpp  Presolve.h  PresolveAnalysis.h  PresolveComponent.h
src/quadratic/: SparseMatrix.cpp  conjugategradient.cpp  projectedgradient.cpp  projectedgradient.h
src/simplex/: HApp.h  HDual.cpp  HDual.h  HDualRow.cpp  HEkk.cpp  HEkk.h  HEkkDual.cpp  HEkkDual.h  HEkkDualRHS.cpp  HEkkPrimal.cpp  HEkkPrimal.h  HFactor.cpp  HFactor.h  HMatrix.h  HPrimal.cpp  HPrimal.h  HSimplex.cpp  HSimplexDebug.cpp  HSimplexNlaProductForm.cpp  HVector.cpp  HVector.h  HighsSimplexAnalysis.cpp  HighsSimplexAnalysis.h  HighsSimplexInterface.cpp  SimplexConst.h
src/util/: HFactor.cpp  HFactor.h  HighsLinearSumBounds.cpp  HighsSparseMatrix.cpp  HighsSparseMatrix.h  HighsUtils.cpp  HighsUtils.h
tests/: test_highspy.py
v1.13.0/: index.html
v1.13.1/: index.html
(+4367 files in other folders)
