py_mod = import('python')
py = py_mod.find_installation(pure: false)
pyb11_dep = [
  py.dependency(),
  dependency('pybind11')
]
# try one large module 
_incdirs += include_directories('.')
_incdirs += include_directories('../src')
_incdirs += include_directories('../extern')

py_cupdlp_srcs = [
    '../src/pdlp/cupdlp/cupdlp_solver.c',
    '../src/pdlp/cupdlp/cupdlp_scaling_cuda.c',
    '../src/pdlp/cupdlp/cupdlp_restart.c',
    '../src/pdlp/cupdlp/cupdlp_proj.c',
    '../src/pdlp/cupdlp/cupdlp_linalg.c',
    '../src/pdlp/cupdlp/cupdlp_cs.c',
    '../src/pdlp/cupdlp/cupdlp_utils.c',
    '../src/pdlp/cupdlp/cupdlp_step.c',
]

py_basiclu_srcs = [
    '../src/ipm/basiclu/basiclu_factorize.c',
    '../src/ipm/basiclu/basiclu_solve_dense.c',
    '../src/ipm/basiclu/lu_build_factors.c',
    '../src/ipm/basiclu/lu_factorize_bump.c',
    '../src/ipm/basiclu/lu_initialize.c',
    '../src/ipm/basiclu/lu_markowitz.c',
    '../src/ipm/basiclu/lu_setup_bump.c',
    '../src/ipm/basiclu/lu_solve_sparse.c',
    '../src/ipm/basiclu/basiclu_get_factors.c',
    '../src/ipm/basiclu/basiclu_solve_for_update.c',
    '../src/ipm/basiclu/lu_condest.c',
    '../src/ipm/basiclu/lu_file.c',
    '../src/ipm/basiclu/lu_internal.c',
    '../src/ipm/basiclu/lu_matrix_norm.c',
    '../src/ipm/basiclu/lu_singletons.c',
    '../src/ipm/basiclu/lu_solve_symbolic.c',
    '../src/ipm/basiclu/lu_update.c',
    '../src/ipm/basiclu/basiclu_initialize.c',
    '../src/ipm/basiclu/basiclu_solve_sparse.c',
    '../src/ipm/basiclu/lu_pivot.c',
    '../src/ipm/basiclu/lu_solve_dense.c',
    '../src/ipm/basiclu/lu_solve_triangular.c',
    '../src/ipm/basiclu/basiclu_object.c',
    '../src/ipm/basiclu/basiclu_update.c',
    '../src/ipm/basiclu/lu_dfs.c',
    '../src/ipm/basiclu/lu_garbage_perm.c',
    '../src/ipm/basiclu/lu_residual_test.c',
    '../src/ipm/basiclu/lu_solve_for_update.c',
]

py_ipx_srcs = [
    '../src/ipm/ipx/basiclu_kernel.cc',
    '../src/ipm/ipx/basiclu_wrapper.cc',
    '../src/ipm/ipx/basis.cc',
    '../src/ipm/ipx/conjugate_residuals.cc',
    '../src/ipm/ipx/control.cc',
    '../src/ipm/ipx/crossover.cc',
    '../src/ipm/ipx/diagonal_precond.cc',
    '../src/ipm/ipx/forrest_tomlin.cc',
    '../src/ipm/ipx/guess_basis.cc',
    '../src/ipm/ipx/indexed_vector.cc',
    '../src/ipm/ipx/info.cc',
    '../src/ipm/ipx/ipm.cc',
    '../src/ipm/ipx/ipx_c.cc',
    '../src/ipm/ipx/iterate.cc',
    '../src/ipm/ipx/kkt_solver.cc',
    '../src/ipm/ipx/kkt_solver_basis.cc',
    '../src/ipm/ipx/kkt_solver_diag.cc',
    '../src/ipm/ipx/linear_operator.cc',
    '../src/ipm/ipx/lp_solver.cc',
    '../src/ipm/ipx/lu_factorization.cc',
    '../src/ipm/ipx/lu_update.cc',
    '../src/ipm/ipx/maxvolume.cc',
    '../src/ipm/ipx/model.cc',
    '../src/ipm/ipx/normal_matrix.cc',
    '../src/ipm/ipx/sparse_matrix.cc',
    '../src/ipm/ipx/sparse_utils.cc',
    '../src/ipm/ipx/splitted_normal_matrix.cc',
    '../src/ipm/ipx/starting_basis.cc',
    '../src/ipm/ipx/symbolic_invert.cc',
    '../src/ipm/ipx/timer.cc',
    '../src/ipm/ipx/utils.cc',
]

py_highs_srcs = [
    '../extern/filereaderlp/reader.cpp',
    '../src/io/Filereader.cpp',
    '../src/io/FilereaderLp.cpp',
    '../src/io/FilereaderEms.cpp',
    '../src/io/FilereaderMps.cpp',
    '../src/io/HighsIO.cpp',
    '../src/io/HMPSIO.cpp',
    '../src/io/HMpsFF.cpp',
    '../src/io/LoadOptions.cpp',
    '../src/lp_data/Highs.cpp',
    '../src/lp_data/HighsCallback.cpp',
    '../src/lp_data/HighsDebug.cpp',
    '../src/lp_data/HighsInfo.cpp',
    '../src/lp_data/HighsInfoDebug.cpp',
    '../src/lp_data/HighsDeprecated.cpp',
    '../src/lp_data/HighsInterface.cpp',
    '../src/lp_data/HighsLp.cpp',
    '../src/lp_data/HighsLpUtils.cpp',
    '../src/lp_data/HighsModelUtils.cpp',
    '../src/lp_data/HighsRanging.cpp',
    '../src/lp_data/HighsSolution.cpp',
    '../src/lp_data/HighsSolutionDebug.cpp',
    '../src/lp_data/HighsSolve.cpp',
    '../src/lp_data/HighsStatus.cpp',
    '../src/lp_data/HighsOptions.cpp',
    '../src/mip/HighsMipSolver.cpp',
    '../src/mip/HighsMipSolverData.cpp',
    '../src/mip/HighsDomain.cpp',
    '../src/mip/HighsDynamicRowMatrix.cpp',
    '../src/mip/HighsLpRelaxation.cpp',
    '../src/mip/HighsSeparation.cpp',
    '../src/mip/HighsSeparator.cpp',
    '../src/mip/HighsTableauSeparator.cpp',
    '../src/mip/HighsModkSeparator.cpp',
    '../src/mip/HighsPathSeparator.cpp',
    '../src/mip/HighsCutGeneration.cpp',
    '../src/mip/HighsSearch.cpp',
    '../src/mip/HighsConflictPool.cpp',
    '../src/mip/HighsCutPool.cpp',
    '../src/mip/HighsCliqueTable.cpp',
    '../src/mip/HighsGFkSolve.cpp',
    '../src/mip/HighsTransformedLp.cpp',
    '../src/mip/HighsLpAggregator.cpp',
    '../src/mip/HighsDebugSol.cpp',
    '../src/mip/HighsImplications.cpp',
    '../src/mip/HighsPrimalHeuristics.cpp',
    '../src/mip/HighsPseudocost.cpp',
    '../src/mip/HighsRedcostFixing.cpp',
    '../src/mip/HighsNodeQueue.cpp',
    '../src/mip/HighsObjectiveFunction.cpp',
    '../src/model/HighsHessian.cpp',
    '../src/model/HighsHessianUtils.cpp',
    '../src/model/HighsModel.cpp',
    '../src/parallel/HighsTaskExecutor.cpp',
    '../src/presolve/ICrash.cpp',
    '../src/presolve/ICrashUtil.cpp',
    '../src/presolve/ICrashX.cpp',
    '../src/presolve/HighsPostsolveStack.cpp',
    '../src/presolve/HighsSymmetry.cpp',
    '../src/presolve/HPresolve.cpp',
    '../src/presolve/HPresolveAnalysis.cpp',
    '../src/presolve/PresolveComponent.cpp',
    '../src/qpsolver/a_asm.cpp',
    '../src/qpsolver/a_quass.cpp',
    '../src/qpsolver/basis.cpp',
    '../src/qpsolver/quass.cpp',
    '../src/qpsolver/ratiotest.cpp',
    '../src/qpsolver/scaling.cpp',
    '../src/qpsolver/perturbation.cpp',
    '../src/simplex/HEkk.cpp',
    '../src/simplex/HEkkControl.cpp',
    '../src/simplex/HEkkDebug.cpp',
    '../src/simplex/HEkkPrimal.cpp',
    '../src/simplex/HEkkDual.cpp',
    '../src/simplex/HEkkDualRHS.cpp',
    '../src/simplex/HEkkDualRow.cpp',
    '../src/simplex/HEkkDualMulti.cpp',
    '../src/simplex/HEkkInterface.cpp',
    '../src/simplex/HighsSimplexAnalysis.cpp',
    '../src/simplex/HSimplex.cpp',
    '../src/simplex/HSimplexDebug.cpp',
    '../src/simplex/HSimplexNla.cpp',
    '../src/simplex/HSimplexNlaDebug.cpp',
    '../src/simplex/HSimplexNlaFreeze.cpp',
    '../src/simplex/HSimplexNlaProductForm.cpp',
    '../src/simplex/HSimplexReport.cpp',
    '../src/test/DevKkt.cpp',
    '../src/test/KktCh2.cpp',
    '../src/util/HFactor.cpp',
    '../src/util/HFactorDebug.cpp',
    '../src/util/HFactorExtend.cpp',
    '../src/util/HFactorRefactor.cpp',
    '../src/util/HFactorUtils.cpp',
    '../src/util/HighsHash.cpp',
    '../src/util/HighsLinearSumBounds.cpp',
    '../src/util/HighsMatrixPic.cpp',
    '../src/util/HighsMatrixUtils.cpp',
    '../src/util/HighsSort.cpp',
    '../src/util/HighsSparseMatrix.cpp',
    '../src/util/HighsUtils.cpp',
    '../src/util/HSet.cpp',
    '../src/util/HVectorBase.cpp',
    '../src/util/stringutil.cpp',
]

py_srcs = [
  py_highs_srcs,
  '../src/ipm//IpxWrapper.cpp',
  '../src/pdlp/cupdlpWrapper.cpp',
  py_cupdlp_srcs,
  py_basiclu_srcs,
  py_ipx_srcs
]

py.extension_module(
  '_highs',
  sources : [highspy_cpp, py_srcs],
  # sources : [highspy_cpp],
  # dependencies: [pyb11_dep, highs_dep],
  dependencies: [pyb11_dep],
  cpp_args: _args,
  install: true,
  subdir: 'highspy',
  include_directories: _incdirs,
)


# py.extension_module(
#   '_highs',
#   sources : highspy_cpp,
#   dependencies: [pyb11_dep, highs_dep],
#   cpp_args: _args,
#   install: true,
#   subdir: 'highspy',
#   include_directories: _incdirs,
# )

# py.extension_module(
#   '_highs_options',
#   sources : highsoptions_cpp,
#   dependencies: [pyb11_dep, highs_dep],
#   cpp_args: _args,
#   install: true,
#   subdir: 'highspy',
#   include_directories: _incdirs,
# )
